--- a/app/templates/projects/projects.html
+++ b/app/templates/projects/projects.html
@@ -1,61 +1,64 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
-{% include 'projects/_featured_projects.html' %}
+{% extends 'base.html' %} {% block content %} {% include
+'projects/_featured_projects.html' %}
 
 <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel">
-    <!-- Carousel Indicators -->
-    <ol class="carousel-indicators">
-        {% for project in projects %}
-        <li
-            data-bs-target="#projectCarousel"
-            data-bs-slide-to="{{ loop.index0 }}"
-            {% if loop.first %}class="active"{% endif %}
-        ></li>
-        {% endfor %}
-    </ol>
+  <!-- Carousel Indicators -->
+  <ol class="carousel-indicators">
+    {% for project in projects %}
+    <li
+      data-bs-target="#projectCarousel"
+      data-bs-slide-to="{{ loop.index0 }}"
+      {%
+      if
+      loop.first
+      %}class="active"
+      {%
+      endif
+      %}
+    ></li>
+    {% endfor %}
+  </ol>
 
-    <!-- Carousel Slides -->
-    <div class="carousel-inner">
-        {% for project in projects %}
-        <div class="carousel-item {% if loop.first %}active{% endif %}">
-            {% if project.image_filename %}
-            <img
-                src="{{ url_for('static', filename='images/projects/' + project.image_filename) }}"
-                alt="{{ project.name }}"
-                class="d-block w-100"
-            />
-            {% else %}
-            <img
-                src="{{ url_for('static', filename='images/defaults/notfound2.png') }}"
-                alt="Default project image"
-                class="d-block w-100"
-            />
-            {% endif %}
-            <div class="carousel-caption d-none d-md-block">
-                <h5>{{ project.name }}</h5>
-            </div>
-        </div>
-        {% endfor %}
+  <!-- Carousel Slides -->
+  <div class="carousel-inner">
+    {% for project in projects %}
+    <div class="carousel-item {% if loop.first %}active{% endif %}">
+      {% if project.image_filename %}
+      <img
+        src="{{ url_for('static', filename='images/projects/' + project.image_filename) }}"
+        alt="{{ project.name }}"
+        class="d-block w-100"
+      />
+      {% else %}
+      <img
+        src="{{ url_for('static', filename='images/defaults/notfound2.png') }}"
+        alt="Default project image"
+        class="d-block w-100"
+      />
+      {% endif %}
+      <div class="carousel-caption d-none d-md-block">
+        <h5>{{ project.name }}</h5>
+      </div>
     </div>
+    {% endfor %}
+  </div>
 
-    <!-- Carousel Controls -->
-    <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#projectCarousel"
-        data-bs-slide="prev"
-    >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    </button>
-    <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#projectCarousel"
-        data-bs-slide="next"
-    >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    </button>
+  <!-- Carousel Controls -->
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#projectCarousel"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#projectCarousel"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  </button>
 </div>
 {% endblock %}
