--- a/app/templates/default/construction.html
+++ b/app/templates/default/construction.html
@@ -9,6 +9,9 @@
     </div>
   </div>
   {% endfor %}
+  <div class="card my-3">
+  <a href="{{ url_for('services_routes.services') }}" class="btn btn-primary">Services</a>
+  </div>
   <img
     src="{{ url_for('static', filename='images/defaults/construction.png') }}"
     class="img-fluid"
