--- a/app/templates/services/main.html
+++ b/app/templates/services/main.html
@@ -4,12 +4,15 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/service.css', v='1.0') }}">
 {% endblock %}
 
+{% block js %}
+<script src="{{ url_for('static', filename='scripts/service.js', v='1.0') }}"></script>
+{% endblock %}
+
 <!-- Header Section -->
 <section
-  class="py-5 text-center container"
-  style="background-color: var(--dark-gray)"
+  class="text-center container service-header"
 >
-  <div class="row py-lg-5">
+  <div class="row">
     <div class="col-lg-6 col-md-8 mx-auto">
       <h1 class="fw-light text-neon-pink">Our Services</h1>
       <p class="lead text-electric-blue">
@@ -21,14 +24,20 @@
 </section>
 
 <!-- Services List -->
-<section class="album py-5" style="background-color: var(--dark-gray)">
+<section class="album py-5 bg-dark-gray">
   <div class="container">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
       {% for service in services %}
       <div class="col">
-        <div
-          class="card shadow-sm bg-deep-purple {{ 'early-mover' if service.early_eligible }}"
-        >
+        <div class="card shadow-sm bg-deep-purple {{ 'early-mover' if service.early_eligible }}">
+          <div class="card-banner-buttons position-absolute top-0 end-0 m-2">
+            {% if service.early_eligible %}
+              <button type="button" class="btn btn-outline-success btn-sm early-mover-banner">Early Mover Discount!</button>
+            {% endif %}
+            {% if service.experimental %}
+              <button type="button" class="btn btn-outline-danger btn-sm experimental-banner">Experimental Discount!</button>
+            {% endif %}
+          </div>
           <div class="service-image">
             <img
               src="{{ url_for('static', filename='images/services/' + (service.image_filename or 'default.png')) }}"
@@ -37,7 +46,7 @@
             />
           </div>
           <div class="card-body">
-            <p class="card-text text-light">
+            <p class="card-text">
               {{ service.details.description }}
             </p>
             <div class="d-flex justify-content-between align-items-center">
@@ -50,15 +59,17 @@
                 </button>
               </div>
               <small class="text-accent-lime-green">
-                As low as {{ service.price }} {{ service.currency }} {% if
-                service.early_eligible %}
+                As low as {{ service.price }} {{ service.currency }}
+                {% if service.early_eligible %}
                 <span class="early-mover-note">*</span>
+                  {% if service.note %}
+                  <button type="button" class="btn btn-sm btn-info" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ service.note }}">
+                      Note
+                  </button>
+                  {% endif %}
                 {% endif %}
               </small>
             </div>
-            {% if service.early_eligible %}
-            <div class="early-mover-banner">Early Mover Discount!</div>
-            {% endif %}
           </div>
         </div>
       </div>
@@ -69,13 +80,13 @@
 
 <!-- Call to Action -->
 <section
-  class="text-center container my-5"
+  class="text-center container pb-5"
   style="background-color: var(--dark-gray)"
 >
   <p class="lead text-electric-blue">
     Interested in our services or need more information? Feel free to reach out.
   </p>
-  <button type="button" class="btn btn-primary button-neon">Contact Us</button>
+  <button type="button" class="btn btn-primary btn-lg button-neon">Contact Us</button>
 </section>
 
 {% endblock %}
