--- a/app/templates/tutorial/tutorial_detail.html
+++ b/app/templates/tutorial/tutorial_detail.html
@@ -27,6 +27,11 @@
     </nav>
   </aside>
 </div>
+<div class="shariff"
+data-url="https://zerodaypoke.com"
+data-title="Check out this amazing system!"
+data-services='["facebook","twitter","linkedin"]'>
+</div>
 {% endblock %}
 
 {% block js %}
