form filter hard mode complete

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,10 @@
     <!-- Fonts -->
     {% include 'default/fonts.html' %} {% block css %}{% endblock %}
   </head>
+  {% from "utils/macros.html" import render_form %}
+  {% from 'utils/macros.html' import render_filter_form %}
+  {% from 'utils/macros.html' import render_filter_fields %}
+  
   <body class="{{ body_class|default('text-light bg-dark') }}">
     <header class="wlimit">{% include 'default/nav/main.html' %}</header>
 
