--- a/app/templates/admin/interface.html
+++ b/app/templates/admin/interface.html
@@ -1,6 +1,6 @@
 <!-- app/templates/admin/interface.html -->
-{% extends "base.html" %} {% from "utils/macros.html" import render_form %} {%
-block title %}Interface{% endblock %} {% block content %}
+{% extends "base.html" %}
+{% block title %}Interface{% endblock %} {% block content %}
 
 <h1>Upload CV</h1>
 <!--{{ render_form(form, 'admin_routes.upload_cv', 'Upload') }}-->
