--- a/app/templates/default/account.html
+++ b/app/templates/default/account.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% from "utils/macros.html" import render_form %} {%
-block title %} Account - ZDP {% endblock %} {% block content %}
+{% extends "base.html" %} {% block title %} Account - ZDP {% endblock %} {% block content %}
 <section class="row">
   <div class="mt-4" id="account_info">
     <h2>Account Information</h2>
