--- a/app/templates/services/main.html
+++ b/app/templates/services/main.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/service.css', v='1.0') }}" />
 {% endblock %}
 {% block js %}
-<script src="{{ url_for('static', filename='scripts/service-mixin.js', v='1.0') }}"></script>
+<script src="{{ url_for('static', filename='scripts/service.js', v='1.0') }}"></script>
 {% endblock %}
 
 <!-- Header Section -->
