--- a/app/templates/utils/macros.html
+++ b/app/templates/utils/macros.html
@@ -1,6 +1,6 @@
 {% macro render_text_field(field, is_filter_field=False) %}
 <div class="form-group row mb-2">
-  <label for="{{ field.id }}" class="col-sm-2 col-form-label">{{ field.label.text }}</label>
+  <label for="{{ field.id }}" class="col-sm-2 col-form-label">{{ field.label.text|title_case }}</label>
   <div class="col-sm-10">
     {{ field(class="form-control" ~ (' is-invalid' if field.errors else '') ~ (' filter-field' if is_filter_field)) }}
     {% if field.errors %}
@@ -16,7 +16,7 @@
 
 {% macro render_range_field(field, min_label, max_label, min_value, max_value) %}
 <div class="form-group row mb-2">
-  <label for="{{ field }}" class="col-sm-2 col-form-label">{{ field }}</label>
+  <label for="{{ field }}" class="col-sm-2 col-form-label">{{ field|title_case }}</label>
   <div class="col-sm-4">
     <input type="number" id="{{ field }}_min" name="{{ field }}_min" class="form-control filter-field" placeholder="{{ min_label }}" min="{{ min_value }}" max="{{ max_value }}">
   </div>
@@ -64,23 +64,28 @@
 </div>
 {% endmacro %}
 
+
 {% macro render_boolean_field(field, is_filter_field=False) %}
 <div class="form-group row mb-3">
-  <div class="col-sm-12">
-    <label class="form-check-label col-2" for="{{ field.id }}">
-      {{ field.label.text }}
+  <div class="col-sm-12 d-flex align-items-center">
+    <label class="btn btn-outline-primary w-100 mb-3 d-flex justify-content-between align-items-center" for="{{ field.id }}">
+      <span>{{ field.label.text|title_case }}</span>
+      <input type="checkbox" class="btn-check" id="{{ field.id }}" name="{{ field.name }}" {{ 'checked' if field.data else '' }} {{ 'filter-field' if is_filter_field }} hidden>
+      <span class="checkbox-indicator"></span>
     </label>
-    <input class="form-check-input col-8" type="checkbox" id="{{ field.id }}" name="{{ field.name }}" {{ 'checked' if field.data else '' }} {{ 'filter-field' if is_filter_field }}>
-    {% if field.errors %}
-      <div class="invalid-feedback">
+  </div>
+  {% if field.errors %}
+    <div class="col-sm-12">
+      <div class="invalid-feedback d-block">
         {% for error in field.errors %}
           <p>{{ error }}</p>
         {% endfor %}
       </div>
-    {% endif %}
-  </div>
+    </div>
+  {% endif %}
 </div>
 {% endmacro %}
+
 
 {% macro render_checkbox_field(field) %}
 <div class="form-group row mb-4">
@@ -161,7 +166,7 @@
 
 {% macro render_select_field(field, is_filter_field=False) %}
 <div class="form-group row mb-2">
-  <label for="{{ field.id }}" class="col-sm-2 col-form-label">{{ field.label.text }}</label>
+  <label for="{{ field.id }}" class="col-sm-2 col-form-label">{{ field.label.text|title_case }}</label>
   <div class="col-sm-10">
     <select class="form-control {{ ' filter-field' if is_filter_field }}" id="{{ field.id }}" name="{{ field.name }}">
       {% if field.choices %}
@@ -180,18 +185,32 @@
 {% macro render_filter_form(form, submit_route, submit_label, form_classes='', form_id='') %}
 <form action="{{ url_for(submit_route) }}" method="GET" class="{{ form_classes }}" id="{{ form_id }}">
   <div class="container">
+    <!-- Rendering Other Fields -->
     {% for field in form %}
-      {% if field.type == 'StringField' %}
-        {{ render_text_field(field, true) }}
-      {% elif field.type == 'BooleanField' %}
-        {{ render_boolean_field(field, true) }}
-      {% elif field.type == 'SelectField' %}
-        {{ render_select_field(field, true) }}
-      {% elif field.type == 'FloatField' and 'min' in field.name %}
-        {% set base_field_name = field.name[:-4] %}
-        {{ render_range_field(base_field_name, 'Min', 'Max', min_price, max_price) }}
+      {% if field.type != 'BooleanField' %}
+        {% if field.type == 'StringField' %}
+          {{ render_text_field(field, true) }}
+        {% elif field.type == 'SelectField' %}
+          {{ render_select_field(field, true) }}
+        {% elif field.type == 'FloatField' and 'min' in field.name %}
+          {% set base_field_name = field.name[:-4] %}
+          {{ render_range_field(base_field_name, 'Min', 'Max', min_price, max_price) }}
+        {% endif %}
       {% endif %}
     {% endfor %}
+
+    <!-- Rendering Boolean Fields -->
+    <div class="row">
+      {% for field in form %}
+        {% if field.type == 'BooleanField' %}
+          <div class="col-md">
+            {{ render_boolean_field(field, true) }}
+          </div>
+        {% endif %}
+      {% endfor %}
+    </div>
+
+    <!-- Submit Button -->
     <div class="form-group row">
       <div class="col-sm-12">
         <button type="submit" class="btn btn-primary w-100">{{ submit_label }}</button>
